--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Armando Cavero</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="/cdn-cgi/l/email-protection#8cedfee1ede2e8e3ccf8e3fcffe9edfeefe4a2fce9" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="55342738343b313a15213a2526303427363d7b2530">[email&#160;protected]</span></a>
+                    <a href="mailto:armando@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> armando@topsearch.pe</a>
                     <a href="https://linkedin.com/in/armandocavero" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -384,13 +384,13 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Guillermo van Oordt F.</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="/cdn-cgi/l/email-protection#f790829e9b9b92859a98b783988784929685949fd98792" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="f19684989d9d94839c9eb1859e81829490839299df8194">[email&#160;protected]</span></a>
+                    <a href="mailto:guillermo@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> guillermo@topsearch.pe</a>
                     <a href="https://linkedin.com/in/guillermovanoordt" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
         </div>
         <div class="reveal text-center">
-            <a href="/cdn-cgi/l/email-protection#3b5a49565a555f547b4f544b485e5a495853154b5e045858065c4e5257575e4956547b4f544b485e5a495853154b5e1d484e59515e584f06785455484e574f5a1e090b7e435e584e4f524d5e1e090b7f5e4d5e57544b565e554f" class="gold-btn">
+            <a href="mailto:armando@topsearch.pe?cc=guillermo@topsearch.pe&subject=Solicitud%20de%20reuni%C3%B3n%20-%20Executive%20Mentoring" class="gold-btn">
                 <i data-lucide="calendar" class="w-4 h-4"></i><span>Agendar una conversación</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
             </a>
         </div>
@@ -402,7 +402,7 @@
     <p style="font-size:.85rem;color:#F5F7FA;text-align:center;">Una unidad de negocio de Top Search Perú · © 2026</p>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
     // Splash: hide after CSS animation ends
     document.getElementById('splash').addEventListener('animationend', function() {
         this.style.display = 'none';
