--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <nav class="nav-fixed">
     <div onclick="navigateTo('home')" style="cursor:pointer;display:flex;align-items:center;gap:.75rem">
         <img src="logo.jpg" alt="Executive Mentoring" style="height:2.6rem;width:auto;border-radius:3px;">
-        <span class="brand-name">Executive Development<span class="brand-sub">Top Search Perú · InterSearch Worldwide</span></span>
+        <span class="brand-name">Executive Development<span class="brand-sub"><a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a> · InterSearch Worldwide</span></span>
     </div>
     <div class="hidden md:flex items-center h-full">
         <div class="nav-item"><button onclick="navigateTo('home')" class="nav-link active" id="link-home">Inicio</button></div>
@@ -144,7 +144,7 @@
     <div class="corner-frame" style="right:6vw;top:13vh;width:22vw;height:22vh"></div>
     <div class="relative z-10 flex flex-col items-center justify-center px-[6vw] text-center" style="min-height:88vh;padding-bottom:6rem">
         <div class="reveal mb-8 inline-block"><img src="logo.jpg" alt="Executive Mentoring" style="height:9rem;width:auto"></div>
-        <div class="reveal"><span class="mono" style="font-size:.68rem;letter-spacing:.22em;color:var(--gold);text-transform:uppercase">Executive Development · Top Search Perú</span></div>
+        <div class="reveal"><span class="mono" style="font-size:.68rem;letter-spacing:.22em;color:var(--gold);text-transform:uppercase">Executive Development · <a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a></span></div>
         <h1 class="reveal text-[#F5F7FA] mt-5 mb-6" style="font-size:clamp(2.8rem,6.5vw,5rem);font-weight:600;line-height:.95;max-width:820px">La experiencia no se enseña,<br><em style="color:var(--gold);font-style:italic">se comparte.</em></h1>
         <p class="reveal text-[#A9B6C8] text-lg mb-10 leading-relaxed" style="max-width:580px">Dos programas de mentoría ejecutiva diseñados para acelerar el liderazgo de alto nivel y reducir el riesgo de las transiciones críticas.</p>
         <div class="reveal grid md:grid-cols-2 gap-6 mb-10 w-full" style="max-width:1100px">
@@ -299,9 +299,9 @@
             <div class="shrink-0 mb-6 md:mb-0"><img src="acg.jpg" alt="Armando Cavero" class="mentor-photo" style="width:7rem;height:8.5rem"></div>
             <div>
                 <h3 class="text-[#F5F7FA] mb-1" style="font-size:1.6rem;font-weight:600">Armando Cavero</h3>
-                <span class="mono" style="font-size:.65rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;display:block;margin-bottom:1rem">Mentor Ejecutivo · Socio Top Search Perú</span>
+                <span class="mono" style="font-size:.65rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;display:block;margin-bottom:1rem">Mentor Ejecutivo · Socio <a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a></span>
                 <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Ejecutivo con trayectoria internacional de más de 25 años como CEO y VP Regional en empresas Fortune 500, incluyendo <strong class="text-[#F5F7FA] font-medium">AT&amp;T, NCR, Compaq y Oracle</strong> en el Perú. Fue Vicepresidente para Latinoamérica de NCR Corporation y Director de Ventas para Latinoamérica Norte, con responsabilidad regional desde el World Headquarters en Dayton, Ohio.</p>
-                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Más de 25 años como fundador y director de <strong class="text-[#F5F7FA] font-medium">Top Search Perú</strong>, con más de 400 búsquedas realizadas a nivel C-Level. Ha sido asesor ministerial y director miembro del Comité Ejecutivo de IPAE.</p>
+                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Más de 25 años como fundador y director de <a href="https://www.topsearch.pe" target="_blank" rel="noopener"><strong class="text-[#F5F7FA] font-medium">Top Search Perú</strong></a>, con más de 400 búsquedas realizadas a nivel C-Level. Ha sido asesor ministerial y director miembro del Comité Ejecutivo de IPAE.</p>
                 <p class="text-[#A9B6C8] text-base leading-relaxed mb-5">Bachiller en Ciencias Sociales — Economía (PUCP). Estudios de posgrado en PAD Universidad de Piura, ESAN y AT&amp;T/NCR Management Schools.</p>
                 <div class="flex flex-wrap gap-2">
                     <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">CEO Fortune 500</span>
@@ -316,7 +316,7 @@
             <div class="shrink-0 mb-6 md:mb-0"><img src="gvof.jpg" alt="Guillermo van Oordt F." class="mentor-photo" style="width:7rem;height:8.5rem"></div>
             <div>
                 <h3 class="text-[#F5F7FA] mb-1" style="font-size:1.6rem;font-weight:600">Guillermo van Oordt F.</h3>
-                <span class="mono" style="font-size:.65rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;display:block;margin-bottom:1rem">Mentor Ejecutivo · Socio Top Search Perú</span>
+                <span class="mono" style="font-size:.65rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;display:block;margin-bottom:1rem">Mentor Ejecutivo · Socio <a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a></span>
                 <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Director ejecutivo, CEO y VP en organizaciones locales, regionales y globales en banca, seguros, consultoría y servicios financieros, incluyendo <strong class="text-[#F5F7FA] font-medium">Interbank, Citibank, BTG Pactual, Pacífico Seguros y EY</strong>. Fue Director Ejecutivo de Gobierno Corporativo y Sostenibilidad en EY Perú y CEO de Macro Wealth Management del Grupo Macroconsult.</p>
                 <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Más de ocho años de experiencia en Executive Search especializado en Directores, VPs y C-Levels. Liderazgo comprobado en B2B, B2C y B2G, planificación y sucesión, y gestión de negocios a nivel regional y global.</p>
                 <p class="text-[#A9B6C8] text-base leading-relaxed mb-5">MBA en Negocios Internacionales por la <strong class="text-[#F5F7FA] font-medium">Universidad ESAN</strong>. Bachiller en Administración por Johnson &amp; Wales University (Providence, Rhode Island). Director en IPAE y múltiples Advisory Boards.</p>
@@ -330,7 +330,7 @@
         </div>
         <div class="reveal p-6 border border-[#C9A25F]/20 text-center">
             <p class="text-[#A9B6C8] text-base">Cada programa es conducido por uno de los dos mentores, asignado según el perfil del ejecutivo, el sector y las necesidades específicas del proceso.</p>
-            <p class="text-[#A9B6C8] text-sm mt-2 italic">Top Search Perú · Miembros de InterSearch Worldwide</p>
+            <p class="text-[#A9B6C8] text-sm mt-2 italic"><a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a> · Miembros de InterSearch Worldwide</p>
         </div>
     </div>
 </section>
@@ -374,7 +374,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Armando Cavero</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="mailto:armando@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> armando@topsearch.pe</a>
+                    <a href="/cdn-cgi/l/email-protection#64051609050a000b24100b1417010516070c4a1401" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="6a0b18070b040e052a1e051a190f0b180902441a0f">[email&#160;protected]</span></a>
                     <a href="https://linkedin.com/in/armandocavero" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -384,25 +384,21 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Guillermo van Oordt F.</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="mailto:guillermo@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> guillermo@topsearch.pe</a>
+                    <a href="/cdn-cgi/l/email-protection#a4c3d1cdc8c8c1d6c9cbe4d0cbd4d7c1c5d6c7cc8ad4c1" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="1572607c79797067787a55617a6566707467767d3b6570">[email&#160;protected]</span></a>
                     <a href="https://linkedin.com/in/guillermovanoordt" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
         </div>
-        <div class="reveal text-center">
-            <a href="mailto:armando@topsearch.pe?cc=guillermo@topsearch.pe&subject=Solicitud%20de%20reuni%C3%B3n%20-%20Executive%20Mentoring" class="gold-btn">
-                <i data-lucide="calendar" class="w-4 h-4"></i><span>Agendar una conversación</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
-            </a>
-        </div>
+
     </div>
 </section>
 
 <!-- FOOTER -->
 <footer class="site-footer" style="justify-content:center;">
-    <p style="font-size:.85rem;color:#F5F7FA;text-align:center;">Una unidad de negocio de Top Search Perú · © 2026</p>
+    <p style="font-size:.85rem;color:#F5F7FA;text-align:center;">Una unidad de negocio de <a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:#C9A25F;text-decoration:none">Top Search Perú</a> · © 2026</p>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // Splash: hide after CSS animation ends
     document.getElementById('splash').addEventListener('animationend', function() {
         this.style.display = 'none';
@@ -452,9 +448,4 @@
         const t=document.getElementById(id);
         if(t){t.classList.add('active');window.scrollTo(0,0);}
         document.querySelectorAll('.nav-link').forEach(l=>l.classList.remove('active'));
-        if(id==='home')document.getElementById('link-home').classList.add('active');
-        if(id==='em-overview'||id==='sl-overview')document.getElementById('link-servicios').classList.add('active');
-        if(id.startsWith('diferencia'))document.getElementById('link-diferencia').classList.add('active');
-        if(id==='resultados')document.getElementById('link-resultados').classList.add('active');
-        if(id==='contacto')document.getElementById('link-contacto').classList.add('active');
-        setTimeout(()=>document.querySelectorAll('.page-section.active .reveal').forEach(el=>el.cla
+        if(id==='home')document.getElementById('link-home').classList.add('ac
