--- a/index.html
+++ b/index.html
@@ -399,12 +399,12 @@
             <div>
                 <h3 class="text-[#F5F7FA] mb-1" style="font-size:1.6rem;font-weight:600">Armando Cavero</h3>
                 <span class="mono" style="font-size:.65rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;display:block;margin-bottom:1rem">Mentor Ejecutivo · Socio <a href="https://www.topsearch.pe" target="_blank" rel="noopener" style="color:inherit;text-decoration:none">Top Search Perú</a></span>
-                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Ejecutivo con trayectoria internacional de más de 25 años como CEO y VP Regional en empresas Fortune 500, incluyendo <strong class="text-[#F5F7FA] font-medium">AT&amp;T, NCR, Compaq y Oracle</strong> en el Perú. Fue Vicepresidente para Latinoamérica de NCR Corporation y Director de Ventas para Latinoamérica Norte, con responsabilidad regional desde el World Headquarters en Dayton, Ohio.</p>
-                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Más de 25 años como fundador y director de <a href="https://www.topsearch.pe" target="_blank" rel="noopener"><strong class="text-[#F5F7FA] font-medium">Top Search Perú</strong></a>, con más de 400 búsquedas realizadas a nivel C-Level. Ha sido asesor ministerial y director miembro del Comité Ejecutivo de IPAE.</p>
-                <p class="text-[#A9B6C8] text-base leading-relaxed mb-5">Bachiller en Ciencias Sociales — Economía (PUCP). Estudios de posgrado en PAD Universidad de Piura, ESAN y AT&amp;T/NCR Management Schools.</p>
+                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Ejecutivo con trayectoria internacional de más de 25 años en empresas Fortune 500 como CEO y VP Regional, incluyendo <strong class="text-[#F5F7FA] font-medium">AT&amp;T, NCR, Compaq y Oracle</strong> en el Perú. Fue Vicepresidente LATAM para AT&amp;T G.I.S. y Director de Ventas para Latinoamérica Norte en NCR Corporation, con responsabilidad regional desde el World Headquarters en Dayton, Ohio.</p>
+                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Más de 25 años en Executive Search, fundador y director de <a href="https://www.topsearch.pe" target="_blank" rel="noopener"><strong class="text-[#F5F7FA] font-medium">Top Search Perú</strong></a>, con más de 400 búsquedas realizadas a nivel C-Level. Ha sido asesor ministerial y director miembro del Comité Ejecutivo de IPAE.</p>
+                <p class="text-[#A9B6C8] text-base leading-relaxed mb-4">Bachiller en Ciencias Sociales — Economía (PUCP). Estudios de posgrado en PAD Universidad de Piura, ESAN y AT&amp;T/NCR Management Schools.</p>
                 <div class="flex flex-wrap gap-2">
                     <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">CEO Fortune 500</span>
-                    <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">VP LATAM · NCR</span>
+                    <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">VP LATAM · AT&amp;T G.I.S.</span>
                     <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">+400 búsquedas C-Level</span>
                     <span class="px-3 py-1 text-xs border border-[#C9A25F]/25 text-[#A9B6C8]">AT&amp;T · Compaq · Oracle</span>
                 </div>
