--- a/index.html
+++ b/index.html
@@ -282,7 +282,6 @@
         </div>
         <div class="reveal mb-16">
             <h3 class="text-[#F5F7FA] mb-2" style="font-size:1.6rem;font-weight:600">Estructura del Programa</h3>
-            <p class="text-[#A9B6C8] text-sm mb-8">14 sesiones · ~90 minutos c/u · Tres fases</p>
             <div class="grid md:grid-cols-3 gap-4">
                 <div class="feature-card" style="border-color:rgba(201,162,95,.3)"><div class="mono" style="font-size:.62rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:1rem">Fase 1 · Sesiones 1–3</div><h4 class="text-[#F5F7FA] font-semibold mb-3">Diagnóstico y Alineación</h4><ul class="space-y-2 text-[#A9B6C8] text-base"><li class="flex gap-2"><span style="color:var(--gold)">·</span>Alineación con el Sponsor</li><li class="flex gap-2"><span style="color:var(--gold)">·</span>Conocer al ejecutivo y evaluar competencias</li><li class="flex gap-2"><span style="color:var(--gold)">·</span>Análisis PDA Assessment</li></ul></div>
                 <div class="feature-card" style="border-color:rgba(201,162,95,.5);background:rgba(201,162,95,.04)"><div class="mono" style="font-size:.62rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:1rem">Fase 2 · Sesiones 4–11</div><h4 class="text-[#F5F7FA] font-semibold mb-3">Transferencia de Criterio</h4><ul class="space-y-2 text-[#A9B6C8] text-base"><li class="flex gap-2"><span style="color:var(--gold)">·</span>Criterio de liderazgo</li><li class="flex gap-2"><span style="color:var(--gold)">·</span>Decisiones estratégicas</li><li class="flex gap-2"><span style="color:var(--gold)">·</span>Comunicación ejecutiva</li><li class="flex gap-2"><span style="color:var(--gold)">·</span>Influencia y cultura</li></ul></div>
@@ -544,7 +543,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Armando Cavero</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="/cdn-cgi/l/email-protection#64051609050a000b24100b1417010516070c4a1401" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="6a0b18070b040e052a1e051a190f0b180902441a0f">[email&#160;protected]</span></a>
+                    <a href="mailto:armando@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> armando@topsearch.pe</a>
                     <a href="https://linkedin.com/in/armandocavero" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -554,7 +553,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Guillermo van Oordt F.</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="/cdn-cgi/l/email-protection#a4c3d1cdc8c8c1d6c9cbe4d0cbd4d7c1c5d6c7cc8ad4c1" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="1572607c79797067787a55617a6566707467767d3b6570">[email&#160;protected]</span></a>
+                    <a href="mailto:guillermo@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> guillermo@topsearch.pe</a>
                     <a href="https://linkedin.com/in/guillermovanoordt" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -613,7 +612,7 @@
   }
 </style>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
     // Función para ingresar al sitio
     function ingresarSitio() {
         const splash = document.getElementById('splash');
