--- a/index.html
+++ b/index.html
@@ -328,6 +328,39 @@
             </div>
         </div>
         <div class="reveal mb-16">
+            <h3 class="text-[#F5F7FA] mb-2" style="font-size:1.6rem;font-weight:600">El Timeline de Watkins: Los Primeros 90 Días</h3>
+            <p class="text-[#A9B6C8] text-sm mb-8">Nuestro programa sigue la estructura metodológica de Michael Watkins</p>
+            <div class="grid md:grid-cols-3 gap-4">
+                <div class="feature-card" style="border-color:rgba(201,162,95,.4);background:rgba(201,162,95,.03)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 1–30</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">APRENDER</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Diagnosticar situación</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Mapear cultura y política</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Conversaciones clave</li>
+                    </ul>
+                </div>
+                <div class="feature-card" style="border-color:rgba(201,162,95,.6);background:rgba(201,162,95,.06)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 30–60</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">ACTUAR</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Victorias tempranas</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Construir coaliciones</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Ajustes tácticos</li>
+                    </ul>
+                </div>
+                <div class="feature-card" style="border-color:rgba(201,162,95,.4);background:rgba(201,162,95,.03)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 60–90</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">CONSOLIDAR</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Cambios estructurales</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Ritmo sostenible</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Plan de continuidad</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="reveal mb-16">
             <h3 class="text-[#F5F7FA] mb-2" style="font-size:1.6rem;font-weight:600">Las 4 Sesiones</h3>
             <p class="text-[#A9B6C8] text-sm mb-8">Sesión 1: 2.5 horas (incluye reunión previa con el supervisor) · Sesiones 2–4: 2 horas c/u</p>
             <div class="space-y-4">
@@ -389,6 +422,40 @@
                         <li class="flex gap-2"><span style="color:var(--gold)">·</span>Sin intervención de la empresa</li>
                         <li class="flex gap-2"><span style="color:var(--gold)">·</span>Perspectiva construida por el propio ejecutivo</li>
                         <li class="flex gap-2"><span style="color:var(--gold)">·</span>4 sesiones 100% confidenciales</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="reveal mb-16">
+            <h3 class="text-[#F5F7FA] mb-2" style="font-size:1.6rem;font-weight:600">El Timeline de Watkins: Los Primeros 90 Días</h3>
+            <p class="text-[#A9B6C8] text-sm mb-8">Nuestro programa sigue la estructura metodológica de Michael Watkins</p>
+            <div class="grid md:grid-cols-3 gap-4">
+                <div class="feature-card" style="border-color:rgba(201,162,95,.4);background:rgba(201,162,95,.03)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 1–30</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">APRENDER</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Diagnosticar situación</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Mapear cultura y política</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Conversaciones clave</li>
+                    </ul>
+                </div>
+                <div class="feature-card" style="border-color:rgba(201,162,95,.6);background:rgba(201,162,95,.06)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 30–60</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">ACTUAR</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Victorias tempranas</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Construir coaliciones</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Ajustes tácticos</li>
+                    </ul>
+                </div>
+                <div class="feature-card" style="border-color:rgba(201,162,95,.4);background:rgba(201,162,95,.03)">
+                    <div class="mono" style="font-size:.7rem;letter-spacing:.18em;color:var(--gold);text-transform:uppercase;margin-bottom:.8rem">Días 60–90</div>
+                    <h4 class="text-[#F5F7FA] font-semibold mb-3" style="font-size:1.4rem">CONSOLIDAR</h4>
+                    <ul class="space-y-2 text-[#A9B6C8] text-base">
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Cambios estructurales</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Ritmo sostenible</li>
+                        <li class="flex gap-2"><span style="color:var(--gold)">·</span>Plan de continuidad</li>
                     </ul>
                 </div>
             </div>
@@ -543,7 +610,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Armando Cavero</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="mailto:armando@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> armando@topsearch.pe</a>
+                    <a href="/cdn-cgi/l/email-protection#debfacb3bfb0bab19eaab1aeadbbbfacbdb6f0aebb" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="bddccfd0dcd3d9d2fdc9d2cdced8dccfded593cdd8">[email&#160;protected]</span></a>
                     <a href="https://linkedin.com/in/armandocavero" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -553,7 +620,7 @@
                     <div><h3 class="text-[#F5F7FA] font-semibold text-lg">Guillermo van Oordt F.</h3><span class="mono" style="font-size:.6rem;letter-spacing:.14em;color:var(--gold);text-transform:uppercase">Mentor Ejecutivo · Socio</span></div>
                 </div>
                 <div class="space-y-3">
-                    <a href="mailto:guillermo@topsearch.pe" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> guillermo@topsearch.pe</a>
+                    <a href="/cdn-cgi/l/email-protection#1e796b7772727b6c73715e6a716e6d7b7f6c7d76306e7b" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="mail" class="w-4 h-4"></i> <span class="__cf_email__" data-cfemail="4423312d28282136292b04302b3437212536272c6a3421">[email&#160;protected]</span></a>
                     <a href="https://linkedin.com/in/guillermovanoordt" target="_blank" rel="noopener" class="flex items-center gap-3 text-[#A9B6C8] hover:text-[#C9A25F] transition-colors text-base"><i data-lucide="linkedin" class="w-4 h-4"></i> LinkedIn</a>
                 </div>
             </div>
@@ -612,7 +679,7 @@
   }
 </style>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // Función para ingresar al sitio
     function ingresarSitio() {
         const splash = document.getElementById('splash');
@@ -656,9 +723,4 @@
     }
 </script><script>
     lucide.createIcons();
-    function navigateTo(id){
-        document.querySelectorAll('.page-section').forEach(el=>el.classList.remove('active'));
-        const t=document.getElementById(id);
-        if(t){t.classList.add('active');window.scrollTo(0,0);}
-        document.querySelectorAll('.nav-link').forEach(l=>l.classList.remove('active'));
-        if(id==='home')document.getElementById('link-home').classList.add('ac
+    function
