--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div class="text-center mb-14">
             <h2 class="reveal text-[#F5F7FA] mb-4" style="font-size:clamp(2rem,5vw,3.5rem);font-weight:600">Resultados Esperados</h2>
             <div class="gold-line center"></div>
-            <p class="reveal text-[#A9B6C8] max-w-xl mx-auto text-base leading-relaxed mt-4">Aplicables a ambos programas — Executive Mentoring&copy; y Soft Landing&copy;.</p>
+            <p class="reveal text-[#A9B6C8] max-w-xl mx-auto text-base leading-relaxed mt-4">Aplicables a los TRES programas — Executive Mentoring&copy; - Soft Landing&copy; - Self Landing&copy;</p>
         </div>
         <div class="reveal grid md:grid-cols-2 lg:grid-cols-4 gap-5 mb-16">
             <div class="feature-card"><i data-lucide="target" class="w-7 h-7 text-[#C9A25F] mb-4"></i><h3 class="text-[#F5F7FA] font-semibold mb-2 text-lg">Transiciones Exitosas</h3><p class="text-[#A9B6C8] text-base">Aterrizaje más rápido y seguro en roles C-Level, con menor riesgo de fracaso.</p></div>
